Fixed Camouflage Directory Assignment for Null Faction Codes
Changed the default camouflage directory to "Standard Camouflage" when the faction code is null, ensuring valid directory assignment.